--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Milos Dimitrijevic | Frontend Developer</title>
+
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Frontend Developer Portfolio – Angular, TypeScript, Clean Code & modern UI.">
+  <meta name="author" content="Milos Dimitrijevic">
+
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg">
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+
+  <meta name="apple-mobile-web-app-title" content="DIMIT">
+  <meta name="theme-color" content="#0f172a">
+
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
 </head>
+
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
