font, header, logo, hero update

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <meta name="description" content="Frontend Developer Portfolio – Angular, TypeScript, Clean Code & modern UI.">
   <meta name="author" content="Milos Dimitrijevic">
 
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&family=Karla:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+
+    <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg">
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
