og added, small update

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de-AT">
 
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Frontend Developer Portfolio – Angular, TypeScript, Clean Code & modern UI.">
   <meta name="author" content="Milos Dimitrijevic">
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="https://www.dimit.cc/">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="de_AT">
+  <meta property="og:site_name" content="Milos Dimitrijevic">
+  <meta property="og:title" content="Milos Dimitrijevic | Frontend Developer">
+  <meta property="og:description" content="Frontend Developer Portfolio – Angular, TypeScript, Clean Code & modern UI.">
+  <meta property="og:url" content="https://www.dimit.cc/">
+  <meta property="og:image" content="https://www.dimit.cc/assets/og/og.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Milos Dimitrijevic | Frontend Developer">
+  <meta name="twitter:description" content="Frontend Developer Portfolio – Angular, TypeScript, Clean Code & modern UI.">
+  <meta name="twitter:image" content="https://www.dimit.cc/assets/og/og.png">
 
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
